Fix scrollbar appearing

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,12 +1,13 @@
 $background-color: #3b444b;
 $text-color: white;
 
-
-html, body {
+* {
   margin: 0;
   padding: 0;
+}
+html {
   background-color: $background-color;
-  height: 100%;
+  height: 100vh;
 }
 #container {
   min-height: 100%;
